        - cleaned up test logic due to failing MSWin tests
        - switched from CPAN::ReverseDependencies to MetaCPAN::Client, as the
          former was using MetaCPAN::API which is depricated, and failing to
          install on MSWin systems. (I sent a PR to the dist which fixes it). We
          now have our own revdep discovery process

2.04    2016-04-27
        - Results from MSWin now properly show the _bit suffix for the perl used
          in test results (closes #124)
        - instance_install() when installing randomly doesn't attempt duplicate
          versions any longer (fixes #123)
        - cleaned up formatting of revdep returned output (closes #126)
        - on Unix, we now include Release Candidate perl instances when using
          random install, eg perl-5.24.0-RC3 (closes #127)
        - various log entry cleanup (closes #112)

2.03    2016-04-26
        - brewbuild can now dispatch the most basic of testing to remotes via
          the -D and -t flags. For more advanced remote testing, use bbdispatch
          (closes #122)
        - changed to searching %PATH% for binaries as opposed to using 'where'
          on MSWin, as on pre 2k3, 'where' didn't exist (closes #117)
        - moved setting the brewbuild command default from bbdispatch to
          Dispatch (closes #118)
        - On MSWin, we now accept the _32/_64 suffixes in --install, otherwise
          we'll default to 64-bit. This suffix will be stripped on Unix systems
          if dispatching to both Unix and Windows testers (closes #114)
        - removed prerequisite of needing to be an Administrator user on MSWin
          from the Tutorial (closes #119)
        - fixed a series of out-of-order debug logging message entries
        - added a timeout param to instance_install(), default 300 secs. If an
          install takes longer than this, it'll roll out the changes and log an
          entry of the problem (closes #110)